test/fail/basic_syntax/brace_outside_block.lly
#[
SyntaxError: '}' outside of a block.
    from brace_outside_block.lly:6
]#

}
